--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <nav class="TopNav">
       <div class="Logo">
         <a href="/">
-          <img src="assets/img/LOGO.svg" alt="EMDIEM logo">
+          <img src="/assets/img/LOGO.svg" alt="EMDIEM logo">
         </a>
       </div>
       <ul class="Navigation">
@@ -82,7 +82,7 @@
         <img src="/assets/img/projects/dot.svg" alt="Dot planet somewhere in space" class="dot-planet planet-2">
         <img src="/assets/img/projects/dot.svg" alt="Dot planet somewhere in space" class="dot-planet planet-3 blur">
         <img src="/assets/img/projects/dot.svg" alt="Dot planet somewhere in space" class="dot-planet planet-4">
-        <img src="assets/svg/1. FONDO AZUL.svg" alt="Blue background" style="height: 100vh; margin: -148px -74px; position: relative; left: 30vw;">
+        <img src="/assets/svg/1. FONDO AZUL.svg" alt="Blue background" style="height: 100vh; margin: -148px -74px; position: relative; left: 30vw;">
         <div class="Page__Content">
           <div class="index__main-content">
             <h1 class="header">Le damos vida a tus ideas.</h1>
@@ -98,32 +98,32 @@
           <ul>
             <li>
               <a href="javascript:void(0)">
-                <img src="assets/img/dribbble.svg" alt="Dribble">
+                <img src="/assets/img/dribbble.svg" alt="Dribble">
                 Dribbble
               </a>
             </li>
             <li>
               <a href="javascript:void(0)">
-                <img src="assets/img/instagram.svg" alt="Instagram">
+                <img src="/assets/img/instagram.svg" alt="Instagram">
                 Instagram
               </a>
             </li>
             <li>
               <a href="javascript:void(0)">
-                <img src="assets/img/facebook.svg" alt="Facebook">
+                <img src="/assets/img/facebook.svg" alt="Facebook">
                 Facebook
               </a>
             </li>
             <li>
               <a href="javascript:void(0)">
-                <img src="assets/img/vimeo.svg" alt="Vimeo">
+                <img src="/assets/img/vimeo.svg" alt="Vimeo">
                 Vimeo
               </a>
             </li>
           </ul>
         </div>
         <div class="scroll-down">
-          <img src="assets/img/scroll-down.svg" alt="scroll down icon">
+          <img src="/assets/img/scroll-down.svg" alt="scroll down icon">
         </div>
       </div>
       <div id="WhatWeDo" class="Page Page__WhatWeDo">
@@ -137,12 +137,12 @@
         <div class="what-we-do__services">
           <div class="item v-align-top">
             <div class="service ui-ux">
-              <img src="assets/svg/UX:UI/FONDO UXUI.svg" alt="blue">
+              <img src="/assets/svg/UX:UI/FONDO UXUI.svg" alt="blue">
               <div class="characters">
-                <img class="phone" src="assets/svg/UX:UI/CELULAR UX.svg" alt="phone">
-                <img class="girl" src="assets/svg/UX:UI/CHICA UXUI.svg" alt="girl">
-                <img class="man" src="assets/svg/UX:UI/MAN UXUI.svg" alt="man">
-                <img class="comet" src="assets/svg/COMETA.svg" alt="comet">
+                <img class="phone" src="/assets/svg/UX:UI/CELULAR UX.svg" alt="phone">
+                <img class="girl" src="/assets/svg/UX:UI/CHICA UXUI.svg" alt="girl">
+                <img class="man" src="/assets/svg/UX:UI/MAN UXUI.svg" alt="man">
+                <img class="comet" src="/assets/svg/COMETA.svg" alt="comet">
               </div>
             </div>
             <div class="item-description">
@@ -154,16 +154,16 @@
           </div>
           <div class="item v-align-bottom">
             <div class="service animation">
-              <img src="assets/svg/ANIMACIÓN/1. FONDO AZUL.svg" alt="blue">
+              <img src="/assets/svg/ANIMACIÓN/1. FONDO AZUL.svg" alt="blue">
               <div class="characters">
-                <img class="screen" src="assets/svg/ANIMACIÓN/PANTALLA CENTRAL.svg" alt="screen">
-                <img class="screen left" src="assets/svg/ANIMACIÓN/PANTALLA IZQ.svg" alt="screen left">
-                <img class="screen right" src="assets/svg/ANIMACIÓN/PANTALLA DER.svg" alt="screen right">
-                <img class="coffee" src="assets/svg/ANIMACIÓN/CAFE.svg" alt="coffee">
-                <img class="planet" src="assets/svg/ANIMACIÓN/PLANETA.svg" alt="planet">
-                <img class="man" src="assets/svg/ANIMACIÓN/MAN ANIM.svg" alt="man">
-                <img class="video-beam" src="assets/svg/ANIMACIÓN/VIDEO BEAM.svg" alt="video beam">
-                <img class="light" src="assets/svg/ANIMACIÓN/LUZ.svg" alt="light">
+                <img class="screen" src="/assets/svg/ANIMACIÓN/PANTALLA CENTRAL.svg" alt="screen">
+                <img class="screen left" src="/assets/svg/ANIMACIÓN/PANTALLA IZQ.svg" alt="screen left">
+                <img class="screen right" src="/assets/svg/ANIMACIÓN/PANTALLA DER.svg" alt="screen right">
+                <img class="coffee" src="/assets/svg/ANIMACIÓN/CAFE.svg" alt="coffee">
+                <img class="planet" src="/assets/svg/ANIMACIÓN/PLANETA.svg" alt="planet">
+                <img class="man" src="/assets/svg/ANIMACIÓN/MAN ANIM.svg" alt="man">
+                <img class="video-beam" src="/assets/svg/ANIMACIÓN/VIDEO BEAM.svg" alt="video beam">
+                <img class="light" src="/assets/svg/ANIMACIÓN/LUZ.svg" alt="light">
               </div>
             </div>
             <div class="item-description">
@@ -175,14 +175,14 @@
           <div class="item">
             <img src="/assets/svg/DETALLES/PUNTO AMARILLO.svg" alt="Dot planet" class="dot-planet planet-8 blur">
             <div class="service mobile-development">
-              <img src="assets/svg/DESARROLLO MOVIL/FONDO AZUL.svg" alt="blue">
+              <img src="/assets/svg/DESARROLLO MOVIL/FONDO AZUL.svg" alt="blue">
               <div class="characters">
-                <img class="code" src="assets/svg/DESARROLLO MOVIL/CODIGO.svg" alt="code">
-                <img class="man" src="assets/svg/DESARROLLO MOVIL/MAN DESARROLLO M.svg" alt="man">
-                <img class="girl" src="assets/svg/DESARROLLO MOVIL/CHICA.svg" alt="girl">
-                <img class="dots" src="assets/svg/DESARROLLO MOVIL/CUADRO PUNTOS.svg" alt="dots">
-                <img class="mark" src="assets/svg/DESARROLLO MOVIL/CUADRO MARK.svg" alt="mark">
-                <img class="comet" src="assets/svg/COMETA.svg" alt="comet">
+                <img class="code" src="/assets/svg/DESARROLLO MOVIL/CODIGO.svg" alt="code">
+                <img class="man" src="/assets/svg/DESARROLLO MOVIL/MAN DESARROLLO M.svg" alt="man">
+                <img class="girl" src="/assets/svg/DESARROLLO MOVIL/CHICA.svg" alt="girl">
+                <img class="dots" src="/assets/svg/DESARROLLO MOVIL/CUADRO PUNTOS.svg" alt="dots">
+                <img class="mark" src="/assets/svg/DESARROLLO MOVIL/CUADRO MARK.svg" alt="mark">
+                <img class="comet" src="/assets/svg/COMETA.svg" alt="comet">
               </div>
             </div>
             <div class="item-description">
@@ -193,12 +193,12 @@
           <img src="/assets/svg/PLANETS/PLANETA.svg" alt="Random planet" class="random-planet planet-3 blur">
           <div class="item v-align-top">
             <div class="service web-development">
-              <img src="assets/svg/DESARROLLO WEB/FONDO AZUL.svg" alt="blue">
+              <img src="/assets/svg/DESARROLLO WEB/FONDO AZUL.svg" alt="blue">
               <div class="characters">
-                <img class="code" src="assets/svg/DESARROLLO WEB/COMPUTADOR.svg" alt="computer">
-                <img class="girl" src="assets/svg/DESARROLLO WEB/CHICA WEB.svg" alt="girl">
-                <img class="man" src="assets/svg/DESARROLLO WEB/CHICO WEB.svg" alt="man">
-                <img class="comet" src="assets/svg/COMETA.svg" alt="comet">
+                <img class="code" src="/assets/svg/DESARROLLO WEB/COMPUTADOR.svg" alt="computer">
+                <img class="girl" src="/assets/svg/DESARROLLO WEB/CHICA WEB.svg" alt="girl">
+                <img class="man" src="/assets/svg/DESARROLLO WEB/CHICO WEB.svg" alt="man">
+                <img class="comet" src="/assets/svg/COMETA.svg" alt="comet">
               </div>
               <img src="/assets/svg/DETALLES/PUNTO AMARILLO.svg" alt="Dot planet" class="dot-planet planet-9">
             </div>
@@ -213,11 +213,11 @@
           <div class="item v-align-bottom">
             <div class="service infrastructure">
                 <img src="/assets/svg/DETALLES/PUNTO AMARILLO.svg" alt="Dot planet" class="dot-planet planet-10">
-              <img src="assets/svg/INFRAESTRUCTURA/FONDO AZUL.svg" alt="blue">
+              <img src="/assets/svg/INFRAESTRUCTURA/FONDO AZUL.svg" alt="blue">
               <div class="characters">
-                <img class="guy" src="assets/svg/INFRAESTRUCTURA/JEAN INFRA.svg" alt="guy">
-                <img class="planet" src="assets/svg/INFRAESTRUCTURA/PLANETA INFRA.svg" alt="planet">
-                <img class="comet" src="assets/svg/COMETA.svg" alt="comet">
+                <img class="guy" src="/assets/svg/INFRAESTRUCTURA/JEAN INFRA.svg" alt="guy">
+                <img class="planet" src="/assets/svg/INFRAESTRUCTURA/PLANETA INFRA.svg" alt="planet">
+                <img class="comet" src="/assets/svg/COMETA.svg" alt="comet">
               </div>
             </div>
             <div class="item-description">
@@ -245,7 +245,7 @@
           <div class="Projects__Item">
             <div class="project-device-with-shape carnaval">
                 <div class="label">
-                  <img src="assets/img/projects/dot.svg" alt="Carnaval de Barranquilla">
+                  <img src="/assets/img/projects/dot.svg" alt="Carnaval de Barranquilla">
                   PROYECTOS
                 </div>
             </div>
@@ -254,77 +254,77 @@
           <div class="Projects__Item">
             <div class="project-device-with-shape carnaval">
                 <div class="label">
-                  <img src="assets/img/projects/dot.svg" alt="Carnaval de Barranquilla">
+                  <img src="/assets/img/projects/dot.svg" alt="Carnaval de Barranquilla">
                   Carnaval de Barranquilla
                 </div>
-              <img src="assets/img/projects/Carnaval/grafismo carnaval.png" alt="project background" class="figure">
-              <img src="assets/img/projects/Carnaval/device.png" alt="Carnaval" class="device">
+              <img src="/assets/img/projects/Carnaval/grafismo carnaval.png" alt="project background" class="figure">
+              <img src="/assets/img/projects/Carnaval/device.png" alt="Carnaval" class="device">
             </div>
           </div>
           <!-- Transmetro -->
           <div class="Projects__Item">
             <div class="project-device-with-shape transmetro">
               <div class="label">
-                <img src="assets/img/projects/dot.svg" alt="Transmetro">
+                <img src="/assets/img/projects/dot.svg" alt="Transmetro">
                 Transmetro
               </div>
-              <img src="assets/img/projects/Transmetro/device.png" alt="Transmetro" class="device">
-              <img src="assets/svg/PROJECTS/Transmetro 1.svg" alt="Logo Transmetro" style="max-height: 40vh; position: relative; top: 10%; left: -30%; z-index: 0; width: 100%; transform: scale(1.4); transform-origin: top;" class="figure-1">
-              <img src="assets/svg/PROJECTS/Transmetro 2.svg" alt="Logo Transmetro" style="max-height: 40vh; position: absolute; top: 25%; right: -30%; z-index: 0; width: 100%; transform: scale(1.4); transform-origin: top;" class="figure-">
+              <img src="/assets/img/projects/Transmetro/device.png" alt="Transmetro" class="device">
+              <img src="/assets/svg/PROJECTS/Transmetro 1.svg" alt="Logo Transmetro" style="max-height: 40vh; position: relative; top: 10%; left: -30%; z-index: 0; width: 100%; transform: scale(1.4); transform-origin: top;" class="figure-1">
+              <img src="/assets/svg/PROJECTS/Transmetro 2.svg" alt="Logo Transmetro" style="max-height: 40vh; position: absolute; top: 25%; right: -30%; z-index: 0; width: 100%; transform: scale(1.4); transform-origin: top;" class="figure-">
             </div>
           </div>
           <!-- Procaps -->
           <div class="Projects__Item">
             <div class="project-device-with-shape procaps">
               <div class="label">
-                <img src="assets/img/projects/dot.svg" alt="Super E Procaps">
+                <img src="/assets/img/projects/dot.svg" alt="Super E Procaps">
                 Super E Procaps
               </div>
-              <img src="assets/img/projects/Procaps/video.png" alt="Animated video" class="video">
-              <img src="assets/img/projects/Procaps/superhero.png" alt="Superhero" class="superhero">
+              <img src="/assets/img/projects/Procaps/video.png" alt="Animated video" class="video">
+              <img src="/assets/img/projects/Procaps/superhero.png" alt="Superhero" class="superhero">
             </div>
           </div>
           <!-- Colmed -->
           <div class="Projects__Item">
             <div class="project-device-with-shape colmed">
               <div class="label">
-                <img src="assets/img/projects/dot.svg" alt="Colmed">
+                <img src="/assets/img/projects/dot.svg" alt="Colmed">
                 Colmed
               </div>
-              <img src="assets/img/projects/Colmed/device.png" alt="Colmed" class="device">
-              <img src="assets/img/projects/Colmed/boxes.svg" alt="Colmed" class="boxes box-1">
-              <img src="assets/img/projects/Colmed/boxes.svg" alt="Colmed" class="boxes box-2">
+              <img src="/assets/img/projects/Colmed/device.png" alt="Colmed" class="device">
+              <img src="/assets/img/projects/Colmed/boxes.svg" alt="Colmed" class="boxes box-1">
+              <img src="/assets/img/projects/Colmed/boxes.svg" alt="Colmed" class="boxes box-2">
             </div>
           </div>
           <!-- GSP -->
           <div class="Projects__Item">
             <div class="project-device-with-shape gsp">
               <div class="label">
-                <img src="assets/img/projects/dot.svg" alt="GSP">
+                <img src="/assets/img/projects/dot.svg" alt="GSP">
                 GSP
               </div>
-              <img src="assets/img/projects/gsp/device.png" alt="GSP" class="device">
+              <img src="/assets/img/projects/gsp/device.png" alt="GSP" class="device">
             </div>
           </div>
           <!-- Tránsito de Barranquilla -->
           <div class="Projects__Item">
             <div class="project-device-with-shape transito">
               <div class="label">
-                <img src="assets/img/projects/dot.svg" alt="Tránsito Alcaldía de Barranquilla">
+                <img src="/assets/img/projects/dot.svg" alt="Tránsito Alcaldía de Barranquilla">
                 Tránsito Alcaldía de Barranquilla
               </div>
-              <img src="assets/img/projects/transito/video.png" alt="Tránsito de Barranquilla" class="video">
+              <img src="/assets/img/projects/transito/video.png" alt="Tránsito de Barranquilla" class="video">
             </div>
           </div>
           <!-- Olímpica -->
           <div class="Projects__Item">
             <div class="project-device-with-shape olimpica">
               <div class="label">
-                <img src="assets/img/projects/dot.svg" alt="Olímpica Estéreo">
+                <img src="/assets/img/projects/dot.svg" alt="Olímpica Estéreo">
                 Olímpica Estéreo
               </div>
-              <!-- <img src="assets/svg/PROJECTS/CORTADAS.svg" alt="Olímpica" class="waves"> -->
-              <img src="assets/svg/PROJECTS/OLIMPICA.png" alt="Logo Transmetro" class="device">
+              <!-- <img src="/assets/svg/PROJECTS/CORTADAS.svg" alt="Olímpica" class="waves"> -->
+              <img src="/assets/svg/PROJECTS/OLIMPICA.png" alt="Logo Transmetro" class="device">
             </div>
           </div>
         </div>
@@ -355,7 +355,7 @@
                   <li>Barranquilla - Colombia</li>
                 </ul>
               </div>
-              <img src="assets/svg/CONTACTO/CHICO ESPACIAL.svg" alt="FLoating in space guy" class="guy-floating-in-space">
+              <img src="/assets/svg/CONTACTO/CHICO ESPACIAL.svg" alt="FLoating in space guy" class="guy-floating-in-space">
               <div class="Contact__Form-section">
                 <form action="#!">
                   <div class="contact-form">
@@ -421,6 +421,7 @@
       })
       return this
     }
+    
     $.fn.navigation = function() {
       const _this = this
       document.addEventListener("scroll", function() {
@@ -435,6 +436,7 @@
         return this
       })
     }
+
     $.fn.animatePlanets = function() {
       const _this = this
       document.addEventListener("scroll", function() {
@@ -451,6 +453,7 @@
       })
       return this
     }
+
     $.fn.animateServices = function() {
       const _this = this
       document.addEventListener("scroll", function() {        
@@ -462,12 +465,7 @@
           const valueToStartAnimation = offsetLeft + left + onePageThird
           const windowWidth = $(window).width()
           const header = $(".what-we-do__header").width()
-          if (index == 3) {
-            console.log(left, offsetLeft)
-            if (left >= offsetLeft) {
-              $element.addClass("animated slideInDown")
-            }
-          }
+          console.log("im here!")
         })
       })
       return this
@@ -475,8 +473,8 @@
     $(document).ready(function() {
       $("#Projects").projects()
       $(".TopNav").navigation()
-      $(".dot-planet, .random-planet").animatePlanets()
-      $(".what-we-do__services .item").animateServices()
+      $(".dot-planet, .random-planet, .item").animatePlanets()
+      // $(".what-we-do__services .item").animateServices()
     })
   </script>
 </body>
