--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>EMDIEM - Laboratorio creativo | Inicio</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600,700,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/animate.css">
-  <link rel="stylesheet" href="/css/animations.css">
-  <link rel="stylesheet" href="/css/utils.css">
-  <link rel="stylesheet" href="/css/projects.css">
-  <link rel="stylesheet" href="/css/portals.css">
-  <link rel="stylesheet" href="/css/services.css">
-  <link rel="stylesheet" href="/css/app.css">
-  <link rel="stylesheet" href="/css/customers.css">
-  <link rel="stylesheet" href="/css/footer.css">
-  <link rel="stylesheet" href="/css/queries.css">
+  <link href="https://fonts.googleapis.comcss?family=Raleway:300,400,600,700,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/animations.css">
+  <link rel="stylesheet" href="css/utils.css">
+  <link rel="stylesheet" href="css/projects.css">
+  <link rel="stylesheet" href="css/portals.css">
+  <link rel="stylesheet" href="css/services.css">
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/customers.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/queries.css">
   <style>
     body {
       height: 100vh;
