--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
           </div>
           <div class="item v-align-bottom">
             <div class="service animation">
-              <img src="assets/svg/ANIMACIÓN/1. FONDO AZUL.svg" alt="blue">
+              <img src="assets/svg/ANIMACION/1. FONDO AZUL.svg" alt="blue">
               <div class="characters">
-                <img class="screen" src="assets/svg/ANIMACIÓN/PANTALLA CENTRAL.svg" alt="screen">
-                <img class="screen left" src="assets/svg/ANIMACIÓN/PANTALLA IZQ.svg" alt="screen left">
-                <img class="screen right" src="assets/svg/ANIMACIÓN/PANTALLA DER.svg" alt="screen right">
-                <img class="coffee" src="assets/svg/ANIMACIÓN/CAFE.svg" alt="coffee">
-                <img class="planet" src="assets/svg/ANIMACIÓN/PLANETA.svg" alt="planet">
-                <img class="man" src="assets/svg/ANIMACIÓN/MAN ANIM.svg" alt="man">
-                <img class="video-beam" src="assets/svg/ANIMACIÓN/VIDEO BEAM.svg" alt="video beam">
-                <img class="light" src="assets/svg/ANIMACIÓN/LUZ.svg" alt="light">
+                <img class="screen" src="assets/svg/ANIMACION/PANTALLA CENTRAL.svg" alt="screen">
+                <img class="screen left" src="assets/svg/ANIMACION/PANTALLA IZQ.svg" alt="screen left">
+                <img class="screen right" src="assets/svg/ANIMACION/PANTALLA DER.svg" alt="screen right">
+                <img class="coffee" src="assets/svg/ANIMACION/CAFE.svg" alt="coffee">
+                <img class="planet" src="assets/svg/ANIMACION/PLANETA.svg" alt="planet">
+                <img class="man" src="assets/svg/ANIMACION/MAN ANIM.svg" alt="man">
+                <img class="video-beam" src="assets/svg/ANIMACION/VIDEO BEAM.svg" alt="video beam">
+                <img class="light" src="assets/svg/ANIMACION/LUZ.svg" alt="light">
               </div>
             </div>
             <div class="item-description">
